--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+.container-body{
+    display: flex;
+    background-color: aquamarine;
+    height: 100vh;
+    justify-content: center;
+    flex-wrap: wrap;
+    
+
+}
+.header{
+    display: flex;
+    background-color: #2090ff;
+    height: 150px;
+    width: 190vh;
+    border-radius: 20px;
+    margin: 20px;
+    box-shadow: inset 0 0 15px 10px #0177eb;
+    
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+p{
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 10px;
+    
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
