--- a/src/Complements/Main&Footer/main&sidebar.css
+++ b/src/Complements/Main&Footer/main&sidebar.css
@@ -1,15 +1,26 @@
+.general-container{
+    display: flex;
+    flex-wrap: wrap;
+  
+
+}
+
+
+
+
+
+
+
 .container-main{
     display: flex;
     background-color: #3bb371;
     border-radius: 20px;
-    width: 600px;
+    width: 700px;
     flex-wrap: wrap;
     padding: 20px;
     box-shadow: inset 0 0 15px 10px #2e8d59;
    
-    
-  
-   
+
     
 }
 
@@ -37,6 +48,21 @@
    
 
 }
+.container-sidebar{
+    display: flex;
+    background-color: #ff6247;
+    height: 400px;
+    border-radius: 20px;
+    height: 500px;
+    width: 250px;
+    margin-left: 20px;
+    box-shadow: inset 0 0 15px 9px  #e02302;
+    
+
+    
+}
+
+
 
 
 
